@@ -1,7 +1,0 @@
-fileFormatVersion: 2
-guid: fd8f7d2c5ebc8402abcea0f79767fa09
-MonoImporter:
-  serializedVersion: 2
-  defaultReferences: []
-  executionOrder: 0
-  icon: {instanceID: 0}
